@@ -22,23 +22,30 @@
  *    http://cpachecker.sosy-lab.org
  */
 package org.sosy_lab.cpachecker.cpa.bam;
-import static com.google.common.collect.FluentIterable.from;
-import static org.sosy_lab.cpachecker.util.AbstractStates.*;
 
+import static com.google.common.collect.FluentIterable.from;
+import static org.sosy_lab.cpachecker.util.AbstractStates.IS_TARGET_STATE;
+import static org.sosy_lab.cpachecker.util.AbstractStates.extractLocation;
+import static org.sosy_lab.cpachecker.util.AbstractStates.isTargetState;
+
+import com.google.common.base.Preconditions;
+import com.google.common.base.Predicate;
+import com.google.common.collect.HashMultimap;
+import com.google.common.collect.Iterables;
+import com.google.common.collect.LinkedListMultimap;
+import com.google.common.collect.Multimap;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.Deque;
 import java.util.HashSet;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.Stack;
 import java.util.logging.Level;
-
 import javax.annotation.Nullable;
-
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
@@ -71,38 +78,8 @@ import org.sosy_lab.cpachecker.util.CPAs;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.Triple;
 
-import com.google.common.base.Preconditions;
-import com.google.common.base.Predicate;
-import com.google.common.collect.HashMultimap;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.LinkedListMultimap;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Multimap;
-
-@Options
+@Options(prefix="cpa.bam")
 public class BAMTransferRelation implements TransferRelation {
-
-  @Options
-  static class PCCInformation {
-
-    @Option(secure=true, name = "pcc.proofgen.doPCC", description = "Generate and dump a proof")
-    private boolean doPCC = false;
-
-    private static PCCInformation instance = null;
-
-    private PCCInformation(Configuration pConfig) throws InvalidConfigurationException {
-      pConfig.inject(this);
-    }
-
-    public static void instantiate(Configuration pConfig) throws InvalidConfigurationException {
-      instance = new PCCInformation(pConfig);
-    }
-
-    public static boolean isPCCEnabled() {
-      return instance.doPCC;
-    }
-
-  }
 
   @Option(name = "handleRecursiveProcedures", secure = true,
       description = "BAM allows to analyse recursive procedures depending on the underlying CPA.")
@@ -117,17 +94,17 @@ public class BAMTransferRelation implements TransferRelation {
 
   final BAMDataManager data;
 
-  protected Block currentBlock;
-  protected BlockPartitioning partitioning;
-  protected int depth = 0;
-  protected final List<Triple<AbstractState, Precision, Block>> stack = new ArrayList<>();
+  protected final BlockPartitioning partitioning;
+  protected final Deque<Triple<AbstractState, Precision, Block>> stack = new ArrayDeque<>();
 
   protected final LogManager logger;
   private final CPAAlgorithmFactory algorithmFactory;
   private final TransferRelation wrappedTransfer;
   protected final Reducer wrappedReducer;
   protected final BAMCPA bamCPA;
-  private final ProofChecker wrappedProofChecker;
+  protected final BAMPCCManager bamPccManager;
+
+  // Callstack-CPA is used for additional recursion handling
   private final CallstackTransferRelation callstackTransfer;
   private MultipleARGSubtreeRemover multipleARGRemover;
 
@@ -140,51 +117,42 @@ public class BAMTransferRelation implements TransferRelation {
   //Stats
   int maxRecursiveDepth = 0;
 
-  boolean breakAnalysis = false;
-
-  public BAMTransferRelation(Configuration pConfig, LogManager pLogger, BAMCPA bamCpa,
-                             ProofChecker wrappedChecker,
-      BAMDataManager pData, ShutdownNotifier pShutdownNotifier) throws InvalidConfigurationException {
-    logger = pLogger;
-    algorithmFactory = new CPAAlgorithmFactory(bamCpa, logger, pConfig, pShutdownNotifier, null);
+  public BAMTransferRelation(
+      Configuration pConfig,
+      BAMCPA bamCpa,
+      ProofChecker wrappedChecker,
+      ShutdownNotifier pShutdownNotifier)
+      throws InvalidConfigurationException {
+    logger = bamCpa.getLogger();
+    algorithmFactory = new CPAAlgorithmFactory(bamCpa, logger, pConfig, pShutdownNotifier);
     callstackTransfer = (CallstackTransferRelation) (CPAs.retrieveCPA(bamCpa, CallstackCPA.class)).getTransferRelation();
     wrappedTransfer = bamCpa.getWrappedCpa().getTransferRelation();
     wrappedReducer = bamCpa.getReducer();
-    PCCInformation.instantiate(pConfig);
     bamCPA = bamCpa;
-    wrappedProofChecker = wrappedChecker;
-    data = pData;
+    data = bamCpa.getData();
+    partitioning = bamCpa.getBlockPartitioning();
 
     assert wrappedReducer != null;
-  }
-
-  void setBlockPartitioning(BlockPartitioning pManager) {
-    partitioning = pManager;
-    /*if (cleanARGAfterAllRefinements) {
-      multipleARGRemover = new MultipleARGSubtreeRemover(bamCPA, removeCachedSubtreeTimer,
-          innerStateToExternStates, multiReducedToExpand, this);
-    } else {
-      multipleARGRemover = null;
-    }*/
-  }
-
-  public BlockPartitioning getBlockPartitioning() {
-    assert partitioning != null;
-    return partitioning;
+    bamPccManager = new BAMPCCManager(
+        wrappedChecker, pConfig, partitioning, wrappedReducer, bamCpa, data);
   }
 
   @Override
   public Collection<? extends AbstractState> getAbstractSuccessors(
-          final AbstractState pState, final Precision pPrecision)
-          throws CPATransferException, InterruptedException {
+      final AbstractState pState, final Precision pPrecision)
+      throws CPATransferException, InterruptedException {
     try {
 
-    final Collection<? extends AbstractState> successors = getAbstractSuccessorsWithoutWrapping(pState, pPrecision);
+      final Collection<? extends AbstractState> successors =
+          getAbstractSuccessorsWithoutWrapping(pState, pPrecision);
 
-    assert !Iterables.any(successors, IS_TARGET_STATE) || successors.size() == 1 :
-            "target-state should be returned as single-element-collection";
+      assert !Iterables.any(successors, IS_TARGET_STATE) || successors.size() == 1 :
+          "target-state should be returned as single-element-collection";
 
-    return attachAdditionalInfoToCallNodes(successors);
+      if (bamPccManager.isPCCEnabled()) {
+        return bamPccManager.attachAdditionalInfoToCallNodes(successors);
+      }
+      return successors;
 
     } catch (CPAException e) {
       throw new RecursiveAnalysisFailedException(e);
@@ -198,26 +166,22 @@ public class BAMTransferRelation implements TransferRelation {
     data.expandedStateToExpandedPrecision.clear();
 
     final CFANode node = extractLocation(pState);
+    final ARGState argState = (ARGState) pState;
 
     // we are at some location inside the program,
     // this part is always and only reached as recursive call with 'doRecursiveAnalysis'
     // (except we have a full cache-hit).
+    if (exitBlockAnalysis(argState, node)) {
 
-    if (exitBlockAnalysis(pState, node)) {
-      // we are leaving the block, do not perform analysis beyond the current block.
+      // We are leaving the block, do not perform analysis beyond the current block.
       return Collections.emptySet();
     }
 
-    if (startNewBlockAnalysis(pState, node)) {
+    if (startNewBlockAnalysis(argState, node)) {
+
       // we are at the entryNode of a new block and we are in a new context,
       // so we have to start a recursive analysis
-      logger.log(Level.FINEST, "Starting recursive analysis of depth", ++depth);
-      maxRecursiveDepth = Math.max(depth, maxRecursiveDepth);
-
-      Collection<? extends AbstractState> resultStates = doRecursiveAnalysis(pState, pPrecision, node);
-
-      logger.log(Level.FINEST, "Finished recursive analysis of depth", depth--);
-      return resultStates;
+      return doRecursiveAnalysis(pState, pPrecision, node);
     }
 
     // the easy case: we are in the middle of a block, so just forward to wrapped CPAs.
@@ -244,19 +208,41 @@ public class BAMTransferRelation implements TransferRelation {
    * @param pState the abstract state at the location
    * @param node the node of the location
    */
-  protected boolean startNewBlockAnalysis(final AbstractState pState, final CFANode node) {
-    return partitioning.isCallNode(node) && !partitioning.getBlockForCallNode(node).equals(currentBlock);
+  protected boolean startNewBlockAnalysis(final ARGState pState, final CFANode node) {
+    return partitioning.isCallNode(node)
+        // at begin of a block, we do not want to enter it again immediately
+        && !partitioning
+            .getBlockForCallNode(node)
+            .equals(stack.isEmpty() ? null : stack.peek().getThird());
   }
 
   /**
-   * When finding a block-exit-location, we do not return any further states.
-   * This stops the current running CPA-algorithm, when its waitlist is emtpy.
+   * When finding a block-exit-location, we do not return any further states. This stops the current
+   * running CPA-algorithm, when its waitlist is emtpy.
    *
-   * @param pState the abstract state at the location
+   * @param argState the abstract state at the location
    * @param node the node of the location
    */
-  protected boolean exitBlockAnalysis(final AbstractState pState, final CFANode node) {
-    return currentBlock != null && currentBlock.isReturnNode(node);
+  protected boolean exitBlockAnalysis(final ARGState argState, final CFANode node) {
+    // exit- and start-locations can overlap -> order of statements in calling method.
+
+    return partitioning.isReturnNode(node)
+        // multiple exits at same location possible.
+        && partitioning.getBlocksForReturnNode(node).contains(getBlockForState(argState));
+  }
+
+  /**
+   * We assume that the root of a reached-set is a initial state at block-entry-location. Searching
+   * backwards from an ARGstate should end in the root-state.
+   */
+  protected Block getBlockForState(ARGState state) {
+    while (!state.getParents().isEmpty()) {
+      state = state.getParents().iterator().next();
+    }
+    CFANode location = extractLocation(state);
+    assert partitioning.isCallNode(location)
+        : "root of reached-set must be located at block entry.";
+    return partitioning.getBlockForCallNode(location);
   }
 
   /**
@@ -271,7 +257,7 @@ public class BAMTransferRelation implements TransferRelation {
       // If only LoopBlocks are used, we can have recursive Loops, too.
 
       for (CFAEdge e : CFAUtils.leavingEdges(node).filter(CFunctionCallEdge.class)) {
-        for (Block block : Lists.transform(stack, Triple.<Block>getProjectionToThird())) {
+        for (Block block : Iterables.transform(stack, Triple::getThird)) {
           if (block.getCallNodes().contains(e.getSuccessor())) {
             return true;
           }
@@ -281,9 +267,25 @@ public class BAMTransferRelation implements TransferRelation {
     return false;
   }
 
-  /** Enters a new block and performs a new analysis or returns result from cache. */
-  protected Collection<? extends AbstractState> doRecursiveAnalysis(
-          final AbstractState initialState, final Precision pPrecision, final CFANode node)
+  /**
+   * Enters a new block and performs a new analysis by recursively initiating
+   * {@link CPAAlgorithm}, or returns a cached result from {@link BAMCache}.
+   *
+   * <p>Postcondition: sets the {@code currentBlock} variable to the currently
+   * processed block.
+   *
+   * <p>Postcondition: pushes the current recursive level on the {@code stack}.
+   *
+   * @param initialState Initial state of the analyzed block.
+   * @param pPrecision Initial precision associated with the block start.
+   * @param node Node corresponding to the block start.
+   *
+   * @return Set of states associated with the block exit.
+   **/
+  protected Collection<AbstractState> doRecursiveAnalysis(
+          final AbstractState initialState,
+          final Precision pPrecision,
+          final CFANode node)
           throws CPAException, InterruptedException  {
 
     //Create ReachSet with node as initial element (+ add corresponding Location+CallStackElement)
@@ -295,28 +297,41 @@ public class BAMTransferRelation implements TransferRelation {
     // -> return these states as successor
     // -> cache the result
 
-    final Block outerSubtree = currentBlock;
-    currentBlock = partitioning.getBlockForCallNode(node);
-    assert currentBlock.getCallNodes().contains(node);
+    final Block outerSubtree = stack.isEmpty() ? null : stack.peek().getThird();
+    final Block innerSubtree = partitioning.getBlockForCallNode(node);
+    bamPccManager.setCurrentBlock(innerSubtree);
+    assert innerSubtree.getCallNodes().contains(node);
 
     logger.log(Level.FINEST, "Reducing state", initialState);
-    Block previousSubtree = stack.isEmpty() ? null : stack.get(stack.size() - 1).getThird();
-    final AbstractState reducedInitialState = wrappedReducer.getVariableReducedState(initialState, currentBlock, previousSubtree, node);
-    final Precision reducedInitialPrecision = wrappedReducer.getVariableReducedPrecision(pPrecision, currentBlock);
+    final AbstractState reducedInitialState = wrappedReducer.getVariableReducedState(initialState, innerSubtree, outerSubtree, node);
+    final Precision reducedInitialPrecision = wrappedReducer.getVariableReducedPrecision(pPrecision, innerSubtree);
 
     if (!stack.isEmpty()) {
-      stateToInnerFunctionCalls.put(stack.get(stack.size() - 1).getFirst(), initialState);
+      stateToInnerFunctionCalls.put(stack.getLast().getFirst(), initialState);
     }
-    final Triple<AbstractState, Precision, Block> currentLevel = Triple.of(reducedInitialState, reducedInitialPrecision, currentBlock);
-    stack.add(currentLevel);
-    logger.log(Level.FINEST, "current Stack:", stack);
+    final Triple<AbstractState, Precision, Block> currentLevel = Triple.of(reducedInitialState, reducedInitialPrecision, innerSubtree);
+    stack.push(currentLevel);
+    logger.log(
+        Level.FINEST,
+        "Starting recursive analysis of depth",
+        stack.size(),
+        " with current Stack:",
+        stack);
+    maxRecursiveDepth = Math.max(stack.size(), maxRecursiveDepth);
 
-    final Collection<? extends AbstractState> resultStates = analyseBlockAndExpand(
-        initialState, pPrecision, outerSubtree, reducedInitialState, reducedInitialPrecision);
+    final Collection<AbstractState> resultStates =
+        analyseBlockAndExpand(
+            initialState,
+            pPrecision,
+            innerSubtree,
+            outerSubtree,
+            reducedInitialState,
+            reducedInitialPrecision);
 
-    final Triple<AbstractState, Precision, Block> lastLevel = stack.remove(stack.size() - 1);
+    logger.log(Level.FINEST, "Finished recursive analysis of depth", stack.size());
+    final Triple<AbstractState, Precision, Block> lastLevel = stack.pop();
     assert lastLevel.equals(currentLevel);
-    currentBlock = outerSubtree;
+    bamPccManager.setCurrentBlock(outerSubtree);
 
     return resultStates;
   }
@@ -329,44 +344,70 @@ public class BAMTransferRelation implements TransferRelation {
     return block.getCallNodes().size() == 1 && block.getCallNode() instanceof FunctionEntryNode;
   }
 
-  /** Analyse block, return expanded exit-states. */
+  /**
+   * Analyse block, return expanded exit-states.
+   *
+   * <p>Breaks if {@code breakAnalysis} was set by the callees.
+   *
+   * @param entryState State associated with the block entry.
+   * @param precision Precision associated with the block entry.
+   * @param innerSubtree Inner block.
+   * @param outerSubtree Outer block.
+   * @param reducedInitialState {@code entryState} after reduction.
+   * @param reducedInitialPrecision {@code precision} after reduction.
+   * @return Set of states associated with the block exit.
+   */
   protected Collection<AbstractState> analyseBlockAndExpand(
-          final AbstractState entryState, final Precision precision, final Block outerSubtree,
-          final AbstractState reducedInitialState, final Precision reducedInitialPrecision)
-          throws CPAException, InterruptedException {
+      final AbstractState entryState,
+      final Precision precision,
+      final Block innerSubtree,
+      @Nullable final Block outerSubtree,
+      final AbstractState reducedInitialState,
+      final Precision reducedInitialPrecision)
+      throws CPAException, InterruptedException {
 
-    final Collection<Pair<AbstractState, Precision>> reducedResult =
-            getReducedResult(entryState, reducedInitialState, reducedInitialPrecision);
+    final Pair<Collection<AbstractState>, ReachedSet> reducedResult =
+        getReducedResult(entryState, reducedInitialState, reducedInitialPrecision, innerSubtree);
 
-    addBlockAnalysisInfo(reducedInitialState);
-
-    if (breakAnalysis) {
-      // analysis aborted, so lets abort here too
-      // TODO why return element?
-      assert reducedResult.size() == 1;
-      return Collections.singleton(Iterables.getOnlyElement(reducedResult).getFirst());
+    if (bamPccManager.isPCCEnabled()) {
+      bamPccManager.addBlockAnalysisInfo(reducedInitialState);
     }
 
-    return expandResultStates(reducedResult, outerSubtree, entryState, precision);
+    return expandResultStates(
+        reducedResult.getFirst(),
+        reducedResult.getSecond(),
+        innerSubtree,
+        outerSubtree,
+        entryState,
+        precision);
   }
 
-  /** This function returns expanded states for all reduced states and updates the caches. */
+  /**
+   * @param reducedResult pairs of reduced sets associated with the block exit.
+   * @param innerSubtree block associated with {@code reducedResult}.
+   * @param outerSubtree block above the one associated with {@code reducedResult}.
+   * @param state state associated with the block entry.
+   * @param precision precision associated with the block entry.
+   * @return expanded states for all reduced states and updates the caches.
+   */
   protected List<AbstractState> expandResultStates(
-          final Collection<Pair<AbstractState, Precision>> reducedResult,
-          final Block outerSubtree, final AbstractState state, final Precision precision) {
+      final Collection<AbstractState> reducedResult,
+      final ReachedSet reached,
+      final Block innerSubtree,
+      @Nullable final Block outerSubtree,
+      final AbstractState state,
+      final Precision precision)
+      throws InterruptedException {
 
     logger.log(Level.FINEST, "Expanding states with initial state", state);
     logger.log(Level.FINEST, "Expanding states", reducedResult);
 
     final List<AbstractState> expandedResult = new ArrayList<>(reducedResult.size());
-    for (Pair<AbstractState, Precision> reducedPair : reducedResult) {
-      AbstractState reducedState = reducedPair.getFirst();
-      Precision reducedPrecision = reducedPair.getSecond();
+    for (AbstractState reducedState : reducedResult) {
+      Precision reducedPrecision = reached.getPrecision(reducedState);
 
-
-      Block outerBlock = stack.size() > 2 ? stack.get(stack.size() - 2).getThird() : null;
       AbstractState expandedState =
-      wrappedReducer.getVariableExpandedState(state, currentBlock, outerBlock, reducedState);
+          wrappedReducer.getVariableExpandedState(state, innerSubtree, outerSubtree, reducedState);
 
       Precision expandedPrecision =
               outerSubtree == null ? reducedPrecision : // special case: return from main
@@ -375,7 +416,7 @@ public class BAMTransferRelation implements TransferRelation {
       ((ARGState)expandedState).addParent((ARGState) state);
       expandedResult.add(expandedState);
 
-      data.registerExpandedState(expandedState, expandedPrecision, reducedState, currentBlock);
+      data.registerExpandedState(expandedState, expandedPrecision, reducedState, innerSubtree);
     }
 
     logger.log(Level.FINEST, "Expanded results:", expandedResult);
@@ -383,57 +424,78 @@ public class BAMTransferRelation implements TransferRelation {
     return expandedResult;
   }
 
-  /** Analyse the block starting at node with initialState.
-   * If there is a result in the cache, it is used,
-   * otherwise a recursive CPAAlgorithm is started. */
-  private Collection<Pair<AbstractState, Precision>> getReducedResult(
-          final AbstractState initialState,
-          final AbstractState reducedInitialState, final Precision reducedInitialPrecision)
-          throws InterruptedException, CPAException {
+  /**
+   * Analyse the block starting at the node with {@code initialState}. If there is a result in the
+   * cache ({@code data.bamCache}), it is used, otherwise a recursive {@link CPAAlgorithm} is
+   * started.
+   *
+   * @param initialState State associated with the block entry.
+   * @param reducedInitialState Reduced {@code initialState}.
+   * @param reducedInitialPrecision Reduced precision associated with the block entry.
+   * @return Set of reduced pairs of abstract states associated with the exit of the block and the
+   *     reached-set they belong to.
+   */
+  private Pair<Collection<AbstractState>, ReachedSet> getReducedResult(
+      final AbstractState initialState,
+      final AbstractState reducedInitialState,
+      final Precision reducedInitialPrecision,
+      final Block innerSubtree)
+      throws InterruptedException, CPAException {
 
-    final Collection<AbstractState> reducedResult;
-    // statesForFurtherAnalysis is always equal to reducedResult, except one special case (aka re-visiting recursion)
+    // statesForFurtherAnalysis is always equal to reducedResult,
+    // except for one special case (on revisiting recursion).
     final Collection<AbstractState> statesForFurtherAnalysis;
 
-    // try to get previously computed element from cache
+    // Try to get an element from cache.
+    // A previously computed element consists of a reached set associated
+    // with the recursive call, and
     final Pair<ReachedSet, Collection<AbstractState>> pair =
-            data.bamCache.get(reducedInitialState, reducedInitialPrecision, currentBlock);
-    ReachedSet reached = pair.getFirst();
+        data.bamCache.get(reducedInitialState, reducedInitialPrecision, innerSubtree);
+    final ReachedSet cachedReached = pair.getFirst();
     final Collection<AbstractState> cachedReturnStates = pair.getSecond();
 
-    assert cachedReturnStates == null || reached != null : "there cannot be result-states without reached-states";
-    if (cachedReturnStates != null && !reached.hasWaitingState()) {
+    assert cachedReturnStates == null || cachedReached != null : "there cannot be "
+        + "result-states without reached-states";
+
+    final Collection<AbstractState> reducedResult;
+    final ReachedSet reached;
+    if (cachedReturnStates != null && !cachedReached.hasWaitingState()) {
 
       // cache hit, return element from cache
-      logger.log(Level.FINEST, "Cache hit with finished reached-set with root", reached.getFirstState());
+      logger.log(Level.FINEST, "Cache hit with finished reached-set with "
+          + "root", cachedReached.getFirstState());
       reducedResult = cachedReturnStates;
       statesForFurtherAnalysis = reducedResult;
+      reached = cachedReached;
 
     } else if (cachedReturnStates != null && cachedReturnStates.size() == 1 &&
-        reached.getLastState() != null && ((ARGState)reached.getLastState()).isTarget()) {
-      assert Iterables.getOnlyElement(cachedReturnStates) == reached.getLastState() :
+        cachedReached.getLastState() != null && ((ARGState)cachedReached.getLastState()).isTarget()) {
+      assert Iterables.getOnlyElement(cachedReturnStates) == cachedReached.getLastState() :
               "cache hit only allowed for finished reached-sets or target-states";
 
       // cache hit, return element from cache
-      logger.log(Level.FINEST, "Cache hit with target-state in reached-set with root", reached.getFirstState());
+      logger.log(Level.FINEST, "Cache hit with target-state in reached-set with root", cachedReached.getFirstState());
       reducedResult = cachedReturnStates;
       statesForFurtherAnalysis = cachedReturnStates;
+      reached = cachedReached;
 
     } else {
-      if (reached == null) {
+      if (cachedReached == null) {
         // we have not even cached a partly computed reach-set,
         // so we must compute the subgraph specification from scratch
-        reached = data.createInitialReachedSet(reducedInitialState, reducedInitialPrecision);
-        data.bamCache.put(reducedInitialState, reducedInitialPrecision, currentBlock, reached);
+        reached =
+            data.createAndRegisterNewReachedSet(
+                reducedInitialState, reducedInitialPrecision, innerSubtree);
         logger.log(Level.FINEST, "Cache miss: starting recursive CPAAlgorithm with new initial reached-set.");
       } else {
+        reached = cachedReached;
         logger.log(Level.FINEST, "Partial cache hit: starting recursive CPAAlgorithm with partial reached-set with root", reached.getFirstState());
       }
 
       //Who should add to this cache in case of partial hit?
       reducedToExpand.put(reducedInitialState, initialState);
 
-      reducedResult = performCompositeAnalysisWithCPAAlgorithm(reached);
+      reducedResult = performCompositeAnalysisWithCPAAlgorithm(reached, innerSubtree);
 
       assert reducedResult != null;
 
@@ -448,10 +510,10 @@ public class BAMTransferRelation implements TransferRelation {
 
     String functionName = AbstractStates.extractLocation(reducedInitialState).getFunctionName();
     innerStateToExternStates.put(functionName, reached);
-    data.initialStateToReachedSet.put(initialState, reached);
+    data.registerInitialState(initialState, reached);
 
     ARGState rootOfBlock = null;
-    if (PCCInformation.isPCCEnabled()) {
+    if (bamPccManager.isPCCEnabled()) {
       if (!(reached.getFirstState() instanceof ARGState)) {
         throw new CPATransferException("Cannot build proof, ARG, for BAM analysis.");
       }
@@ -460,9 +522,14 @@ public class BAMTransferRelation implements TransferRelation {
 
     // use 'reducedResult' for cache and 'statesForFurtherAnalysis' as return value,
     // both are always equal, except analysis of recursive procedures (@fixpoint-algorithm)
-    data.bamCache.put(reducedInitialState, reached.getPrecision(reached.getFirstState()), currentBlock, reducedResult, rootOfBlock);
+    data.bamCache.put(
+        reducedInitialState,
+        reached.getPrecision(reached.getFirstState()),
+        innerSubtree,
+        reducedResult,
+        rootOfBlock);
 
-    return imbueAbstractStatesWithPrecision(reached, statesForFurtherAnalysis);
+    return Pair.of(statesForFurtherAnalysis, reached);
   }
 
   /**
@@ -474,16 +541,23 @@ public class BAMTransferRelation implements TransferRelation {
    * @throws InterruptedException may be thrown in subclass
    */
   protected Collection<AbstractState> filterResultStatesForFurtherAnalysis(
-      final Collection<AbstractState> reducedResult, final Collection<AbstractState> cachedReturnStates)
-          throws CPAException, InterruptedException {
+      final Collection<AbstractState> reducedResult,
+      final Collection<AbstractState> cachedReturnStates)
+      throws CPAException, InterruptedException {
     return reducedResult; // dummy implementation, overridden in sub-class
   }
 
-  /** Analyse the block with a 'recursive' call to the CPAAlgorithm.
-   * Then analyse the result and get the returnStates. */
+  /**
+   * Analyse the block with a recursive call to the {@link CPAAlgorithm} on {@code reached}. May set
+   * {@code breakAnalysis} to indicate that the recursively forked analysis is wishing to break.
+   *
+   * @return return states associated with the analysis.
+   *     <p>NB: return states will be either {@link
+   *     org.sosy_lab.cpachecker.core.interfaces.Targetable}, or associated with the block end.
+   */
   private Collection<AbstractState> performCompositeAnalysisWithCPAAlgorithm(
-          final ReachedSet reached)
-          throws InterruptedException, CPAException {
+      final ReachedSet reached, final Block innerSubtree)
+      throws InterruptedException, CPAException {
 
     // CPAAlgorithm is not re-entrant due to statistics
     CPAAlgorithm algorithm =  algorithmFactory.newInstance();
@@ -497,18 +571,14 @@ public class BAMTransferRelation implements TransferRelation {
       //this needs to be propagated to outer subgraph (till main is reached)
       returnStates = Collections.singletonList(lastState);
 
-    } else if (reached.hasWaitingState()) {
-      //no target state, but waiting elements
-      //analysis failed -> also break this analysis
-      breakAnalysis = true;
-      returnStates =  Collections.singletonList(lastState);
-
     } else {
+      assert !reached.hasWaitingState();
       // get only those states, that are at block-exit.
       // in case of recursion, the block-exit-nodes might also appear in the middle of the block,
       // but the middle states have children, the exit-states have not.
       returnStates = new ArrayList<>();
-      for (AbstractState returnState : AbstractStates.filterLocations(reached, currentBlock.getReturnNodes())) {
+      for (AbstractState returnState :
+          AbstractStates.filterLocations(reached, innerSubtree.getReturnNodes())) {
         if (((ARGState)returnState).getChildren().isEmpty()) {
           returnStates.add(returnState);
         }
@@ -528,68 +598,9 @@ public class BAMTransferRelation implements TransferRelation {
     return returnStates;
   }
 
-  protected List<Pair<AbstractState, Precision>> imbueAbstractStatesWithPrecision(
-      ReachedSet pReached, Collection<AbstractState> pElements) {
-    List<Pair<AbstractState, Precision>> result = new ArrayList<>();
-    for (AbstractState ele : pElements) {
-      result.add(Pair.of(ele, pReached.getPrecision(ele)));
-    }
-    return result;
-  }
-
-  private Collection<? extends AbstractState> attachAdditionalInfoToCallNodes(
-      Collection<? extends AbstractState> pSuccessors) {
-    if (PCCInformation.isPCCEnabled()) {
-      List<AbstractState> successorsWithExtendedInfo = new ArrayList<>(pSuccessors.size());
-      for (AbstractState elem : pSuccessors) {
-        if (!(elem instanceof ARGState)) { return pSuccessors; }
-        if (!(elem instanceof BAMARGBlockStartState)) {
-          successorsWithExtendedInfo.add(createAdditionalInfo((ARGState) elem));
-        } else {
-          successorsWithExtendedInfo.add(elem);
-        }
-      }
-      return successorsWithExtendedInfo;
-    }
-    return pSuccessors;
-  }
-
-  protected AbstractState attachAdditionalInfoToCallNode(AbstractState pElem) {
-    if (!(pElem instanceof BAMARGBlockStartState) && PCCInformation.isPCCEnabled() && pElem instanceof ARGState) { return createAdditionalInfo((ARGState) pElem); }
-    return pElem;
-  }
-
-  private ARGState createAdditionalInfo(ARGState pElem) {
-    CFANode node = AbstractStates.extractLocation(pElem);
-    if (partitioning.isCallNode(node) && !partitioning.getBlockForCallNode(node).equals(currentBlock)) {
-      BAMARGBlockStartState replaceWith = new BAMARGBlockStartState(pElem.getWrappedState(), null);
-      replaceInARG(pElem, replaceWith);
-      return replaceWith;
-    }
-    return pElem;
-  }
-
-  private void replaceInARG(ARGState toReplace, ARGState replaceWith) {
-    if (toReplace.isCovered()) {
-      replaceWith.setCovered(toReplace.getCoveringState());
-    }
-    toReplace.uncover();
-
-    toReplace.replaceInARGWith(replaceWith);
-  }
-
-  protected void addBlockAnalysisInfo(AbstractState pElement) throws CPATransferException {
-    if (PCCInformation.isPCCEnabled()) {
-    	if (data.bamCache.getLastAnalyzedBlock() == null || !(pElement instanceof BAMARGBlockStartState)) {
-        throw new CPATransferException("Cannot build proof, ARG, for BAM analysis.");
-    	}
-      ((BAMARGBlockStartState) pElement).setAnalyzedBlock(data.bamCache.getLastAnalyzedBlock());
-    }
-  }
-
-  public BAMMultipleCEXSubgraphComputer createBAMMultipleSubgraphComputer(Map<ARGState, ARGState> pPathElementToReachedState) {
+  public BAMMultipleCEXSubgraphComputer createBAMMultipleSubgraphComputer() {
     final BAMMultipleCEXSubgraphComputer cexSubgraphComputer = new BAMMultipleCEXSubgraphComputer(bamCPA,
-        pPathElementToReachedState, reducedToExpand);
+        reducedToExpand);
 
         return cexSubgraphComputer;
   }
@@ -598,7 +609,7 @@ public class BAMTransferRelation implements TransferRelation {
   public void removeStateFromAuxiliaryCaches(Set<ARGState> statesToRemove) {
     Set<ARGState> statesToRemoveFromOneCache = new HashSet<>(statesToRemove);
     for (ARGState state : statesToRemove) {
-      AbstractState reducedState = data.initialStateToReachedSet.get(state).getFirstState();
+      AbstractState reducedState = data.getReachedSetForInitialState(state).getFirstState();
       Collection<AbstractState> innerFunctionCalls = stateToInnerFunctionCalls.get(reducedState);
       if (innerFunctionCalls != null && !innerFunctionCalls.isEmpty()) {
         for (AbstractState calledFunction : innerFunctionCalls) {
@@ -609,16 +620,16 @@ public class BAMTransferRelation implements TransferRelation {
     }
 
     for (ARGState state : statesToRemoveFromOneCache) {
-      AbstractState reducedState = data.initialStateToReachedSet.get(state).getFirstState();
+      AbstractState reducedState = data.getReachedSetForInitialState(state).getFirstState();
       multiReducedToExpand.remove(reducedState, state);
 
       Collection<ARGState> children = state.getChildren();
       for (ARGState child : children) {
-        data.expandedStateToReducedState.remove(child);
+        data.removeExpandedState(child);
         //TODO need to remove from block cache as well
         //expandedToBlockCache.remove(child);
       }
-      data.initialStateToReachedSet.remove(state);
+      data.removeInitialState(state);
     }
     reducedToExpand.clear();
     if (correctARGsForBlocks != null) {
@@ -628,8 +639,6 @@ public class BAMTransferRelation implements TransferRelation {
 
   public void cleanCaches() {
     data.clearCaches();
-    data.initialStateToReachedSet.clear();
-    data.expandedStateToReducedState.clear();
     reducedToExpand.clear();
     multiReducedToExpand.clear();
     innerStateToExternStates.clear();
@@ -644,216 +653,22 @@ public class BAMTransferRelation implements TransferRelation {
       AbstractState pElement, List<AbstractState> pOtherElements,
       CFAEdge pCfaEdge, Precision pPrecision) throws CPATransferException,
       InterruptedException {
-    return attachAdditionalInfoToCallNodes(wrappedTransfer.strengthen(pElement, pOtherElements, pCfaEdge, pPrecision));
-  }
-
-  public boolean areAbstractSuccessors(AbstractState pState, CFAEdge pCfaEdge,
-      Collection<? extends AbstractState> pSuccessors) throws CPATransferException,
-      InterruptedException {
-    if (pCfaEdge != null) { return wrappedProofChecker.areAbstractSuccessors(pState, pCfaEdge, pSuccessors); }
-    return areAbstractSuccessors0(pState, pSuccessors, partitioning.getMainBlock());
-  }
-
-  private boolean areAbstractSuccessors0(AbstractState pState,
-      Collection<? extends AbstractState> pSuccessors, final Block currentBlock)
-      throws CPATransferException,
-      InterruptedException {
-    // currently cannot deal with blocks for which the set of call nodes and return nodes of that block is not disjunct
-    boolean successorExists;
-
-    CFANode node = extractLocation(pState);
-
-    if (partitioning.isCallNode(node)
-        && !partitioning.getBlockForCallNode(node).equals(currentBlock)) {
-      // do not support nodes which are call nodes of multiple blocks
-      Block analyzedBlock = partitioning.getBlockForCallNode(node);
-      try {
-        if (!(pState instanceof BAMARGBlockStartState)
-            || ((BAMARGBlockStartState) pState).getAnalyzedBlock() == null
-            || !bamCPA.isCoveredBy(wrappedReducer.getVariableReducedStateForProofChecking(pState, analyzedBlock, node),
-                ((BAMARGBlockStartState) pState).getAnalyzedBlock())) { return false; }
-      } catch (CPAException e) {
-        throw new CPATransferException("Missing information about block whose analysis is expected to be started at "
-            + pState);
-      }
-      try {
-        Collection<ARGState> endOfBlock;
-        Pair<ARGState, Block> key = Pair.of(((BAMARGBlockStartState) pState).getAnalyzedBlock(), analyzedBlock);
-        if (correctARGsForBlocks != null && correctARGsForBlocks.containsKey(key)) {
-          endOfBlock = correctARGsForBlocks.get(key);
-        } else {
-          Pair<Boolean, Collection<ARGState>> result =
-              checkARGBlock(((BAMARGBlockStartState) pState).getAnalyzedBlock(), analyzedBlock);
-          if (!result.getFirst()) { return false; }
-          endOfBlock = result.getSecond();
-          setCorrectARG(key, endOfBlock);
-        }
-
-        HashSet<AbstractState> notFoundSuccessors = new HashSet<>(pSuccessors);
-        AbstractState expandedState;
-
-        Multimap<CFANode, AbstractState> blockSuccessors = HashMultimap.create();
-        for (AbstractState absElement : pSuccessors) {
-          ARGState successorElem = (ARGState) absElement;
-          blockSuccessors.put(extractLocation(absElement), successorElem);
-        }
-
-
-        for (ARGState leaveB : endOfBlock) {
-          successorExists = false;
-          expandedState = wrappedReducer.getVariableExpandedStateForProofChecking(pState, analyzedBlock, leaveB);
-          for (AbstractState next : blockSuccessors.get(extractLocation(leaveB))) {
-            if (bamCPA.isCoveredBy(expandedState, next)) {
-              successorExists = true;
-              notFoundSuccessors.remove(next);
-            }
-          }
-          if (!successorExists) { return false; }
-        }
-
-        if (!notFoundSuccessors.isEmpty()) { return false; }
-
-      } catch (CPAException e) {
-        throw new CPATransferException("Checking ARG with root " + ((BAMARGBlockStartState) pState).getAnalyzedBlock()
-            + " for block " + currentBlock + "failed.");
-      }
+    Collection<? extends AbstractState> out =
+        wrappedTransfer.strengthen(pElement, pOtherElements, pCfaEdge, pPrecision);
+    if (bamPccManager.isPCCEnabled()) {
+      return bamPccManager.attachAdditionalInfoToCallNodes(out);
     } else {
-      HashSet<CFAEdge> usedEdges = new HashSet<>();
-      for (AbstractState absElement : pSuccessors) {
-        ARGState successorElem = (ARGState) absElement;
-        usedEdges.add(((ARGState) pState).getEdgeToChild(successorElem));
-      }
-
-      //no call node, check if successors can be constructed with help of CFA edges
-      for (CFAEdge leavingEdge : CFAUtils.leavingEdges(node)) {
-        // edge leads to node in inner block
-        Block currentNodeBlock = partitioning.getBlockForReturnNode(node);
-        if (currentNodeBlock != null && !currentBlock.equals(currentNodeBlock)
-            && currentNodeBlock.getNodes().contains(leavingEdge.getSuccessor())) {
-          if (usedEdges.contains(leavingEdge)) { return false; }
-          continue;
-        }
-        // edge leaves block, do not analyze, check for call node since if call node is also return node analysis will go beyond current block
-        if (!currentBlock.isCallNode(node) && currentBlock.isReturnNode(node)
-            && !currentBlock.getNodes().contains(leavingEdge.getSuccessor())) {
-          if (usedEdges.contains(leavingEdge)) { return false; }
-          continue;
-        }
-        if (!wrappedProofChecker.areAbstractSuccessors(pState, leavingEdge, pSuccessors)) {
-          return false;
-        }
-      }
+      return out;
     }
-    return true;
   }
 
-  private Pair<Boolean, Collection<ARGState>> checkARGBlock(ARGState rootNode,
-      final Block currentBlock)
-      throws CPAException, InterruptedException {
-    Collection<ARGState> returnNodes = new ArrayList<>();
-    Set<ARGState> waitingForUnexploredParents = new HashSet<>();
-    boolean unexploredParent;
-    Stack<ARGState> waitlist = new Stack<>();
-    HashSet<ARGState> visited = new HashSet<>();
-    HashSet<ARGState> coveredNodes = new HashSet<>();
-    ARGState current;
-
-    waitlist.add(rootNode);
-    visited.add(rootNode);
-
-    while (!waitlist.isEmpty()) {
-      current = waitlist.pop();
-
-      if (current.isTarget()) {
-        returnNodes.add(current);
-      }
-
-      if (current.isCovered()) {
-        coveredNodes.clear();
-        coveredNodes.add(current);
-        do {
-          if (!bamCPA.isCoveredBy(current, current.getCoveringState())) {
-            returnNodes = Collections.emptyList();
-            return Pair.of(false, returnNodes);
-          }
-          coveredNodes.add(current);
-          if (coveredNodes.contains(current.getCoveringState())) {
-            returnNodes = Collections.emptyList();
-            return Pair.of(false, returnNodes);
-          }
-          current = current.getCoveringState();
-        } while (current.isCovered());
-
-        if (!visited.contains(current)) {
-          unexploredParent = false;
-          for (ARGState p : current.getParents()) {
-            if (!visited.contains(p) || waitlist.contains(p)) {
-              waitingForUnexploredParents.add(current);
-              unexploredParent = true;
-              break;
-            }
-          }
-          if (!unexploredParent) {
-            visited.add(current);
-            waitlist.add(current);
-          }
-        }
-        continue;
-      }
-
-      CFANode node = extractLocation(current);
-      if (currentBlock.isReturnNode(node)) {
-        returnNodes.add(current);
-      }
-
-      if (!areAbstractSuccessors0(current, current.getChildren(), currentBlock)) {
-        returnNodes = Collections.emptyList();
-        return Pair.of(false, returnNodes);
-      }
-
-      for (ARGState child : current.getChildren()) {
-        unexploredParent = false;
-        for (ARGState p : child.getParents()) {
-          if (!visited.contains(p) || waitlist.contains(p)) {
-            waitingForUnexploredParents.add(child);
-            unexploredParent = true;
-            break;
-          }
-        }
-        if (unexploredParent) {
-          continue;
-        }
-        if (visited.contains(child)) {
-          returnNodes = Collections.emptyList();
-          return Pair.of(false, returnNodes);
-        } else {
-          waitingForUnexploredParents.remove(child);
-          visited.add(child);
-          waitlist.add(child);
-        }
-      }
-
-    }
-    if (!waitingForUnexploredParents.isEmpty()) {
-      returnNodes = Collections.emptyList();
-      return Pair.of(false, returnNodes);
-    }
-    return Pair.of(true, returnNodes);
-  }
-
-  public void setCorrectARG(Pair<ARGState, Block> pKey, Collection<ARGState> pEndOfBlock) {
-    if (correctARGsForBlocks == null) {
-      correctARGsForBlocks = new HashMap<>();
-    }
-    correctARGsForBlocks.put(pKey, pEndOfBlock);
-  }
 
   @Override
   public Collection<? extends AbstractState> getAbstractSuccessorsForEdge(
       AbstractState pState, Precision pPrecision, CFAEdge pCfaEdge) {
 
     throw new UnsupportedOperationException(
-        "BAMCPA needs to be used as the outer-most CPA,"
+        "BAMCPA needs to be used as the outermost CPA,"
         + " thus it does not support returning successors for a single edge.");
   }
 
